<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.MainFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_animals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="TODO"
        android:src="@drawable/animal_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolBar"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btn_cars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/car_icon"
        app:layout_constraintBottom_toBottomOf="@+id/btn_animals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_animals"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btn_fashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/fasion_icon"
        app:layout_constraintEnd_toEndOf="@+id/btn_animals"
        app:layout_constraintStart_toStartOf="@+id/btn_animals"
        app:layout_constraintTop_toBottomOf="@+id/btn_animals"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btn_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/food_icon"
        app:layout_constraintEnd_toEndOf="@+id/btn_cars"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_fashion"
        app:layout_constraintTop_toBottomOf="@+id/btn_cars"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btn_scince"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/science_icon"
        app:layout_constraintEnd_toEndOf="@+id/btn_fashion"
        app:layout_constraintStart_toStartOf="@+id/btn_fashion"
        app:layout_constraintTop_toBottomOf="@+id/btn_fashion"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btn_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/space_icon"
        app:layout_constraintEnd_toEndOf="@+id/btn_food"
        app:layout_constraintStart_toStartOf="@+id/btn_food"
        app:layout_constraintTop_toBottomOf="@+id/btn_food"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btn_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="TODO"
        android:src="@drawable/game_icon"
        app:layout_constraintEnd_toEndOf="@+id/btn_scince"
        app:layout_constraintStart_toStartOf="@+id/btn_scince"
        app:layout_constraintTop_toBottomOf="@+id/btn_scince"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btn_nature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/todo"
        android:src="@drawable/neture_icon"
        app:layout_constraintEnd_toEndOf="@+id/btn_space"
        app:layout_constraintStart_toStartOf="@+id/btn_space"
        app:layout_constraintTop_toBottomOf="@+id/btn_space"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvAnimals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/animals"
        app:layout_constraintEnd_toEndOf="@+id/btn_animals"
        app:layout_constraintStart_toStartOf="@+id/btn_animals"
        app:layout_constraintTop_toBottomOf="@+id/btn_animals" />

    <TextView
        android:id="@+id/tvCar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/cars"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/btn_cars"
        app:layout_constraintStart_toStartOf="@+id/btn_cars"
        app:layout_constraintTop_toBottomOf="@+id/btn_cars" />

    <TextView
        android:id="@+id/tvFashion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/fashion"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/btn_fashion"
        app:layout_constraintStart_toStartOf="@+id/btn_fashion"
        app:layout_constraintTop_toBottomOf="@+id/btn_fashion" />

    <TextView
        android:id="@+id/tvFood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/food"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/btn_food"
        app:layout_constraintStart_toStartOf="@+id/btn_food"
        app:layout_constraintTop_toBottomOf="@+id/btn_food" />

    <TextView
        android:id="@+id/tvScience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/science"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/btn_scince"
        app:layout_constraintStart_toStartOf="@+id/btn_scince"
        app:layout_constraintTop_toBottomOf="@+id/btn_scince" />

    <TextView
        android:id="@+id/tvSpace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/space"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/btn_space"
        app:layout_constraintStart_toStartOf="@+id/btn_space"
        app:layout_constraintTop_toBottomOf="@+id/btn_space" />

    <TextView
        android:id="@+id/tvGames"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/games"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/btn_games"
        app:layout_constraintStart_toStartOf="@+id/btn_games"
        app:layout_constraintTop_toBottomOf="@+id/btn_games" />

    <TextView
        android:id="@+id/tvNature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/nature"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/btn_nature"
        app:layout_constraintStart_toStartOf="@+id/btn_nature"
        app:layout_constraintTop_toBottomOf="@+id/btn_nature" />

</androidx.constraintlayout.widget.ConstraintLayout>